Add links to social icons and position using flex property

--- a/details.html
+++ b/details.html
@@ -137,39 +137,39 @@
               </ul>
               <div class="subscribe-section row py-5 my-3 px-5 flex-column flex-lg-row align-items-center justify-content-center">
                   <div class="col text-center">
-                    <h4>subscribe</h4>
-                    <form class="">
-                        <div class="container m-0 p-2">
-                            <div class="row">
-                                <div class="col-12 col-md-8 p-1">
-                                  <input type="email" class="form-control btn-outline-secondary bg-dark" placeholder="username@example.com" aria-label="Recipient's username" aria-describedby="button-addon2">
-                                </div>
-                                <div class="col-12 col-md-4 p-1">
-                                  <button class="btn bg-dark text-white bg-dark w-100" type="button" id="button-addon2">Send</button>
-                                </div>
-                            </div>
-                        </div>
-                      </form>
+                    <h4 class="p-0 pt-0 mt-0 mb-4">subscribe</h4>
+                    <form class="p-0 m-0">
+                      <div class="container m-0 p-2">
+                          <div class="row">
+                              <div class="col-12 col-md-8 p-1">
+                                <input type="email" class="form-control btn-outline-secondary bg-dark" placeholder="username@example.com" aria-label="Recipient's username" aria-describedby="button-addon2">
+                              </div>
+                              <div class="col-12 col-md-4 p-1">
+                                <button class="btn bg-dark text-white bg-dark w-100" type="button" id="button-addon2">Send</button>
+                              </div>
+                          </div>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="col text-center pt-0 mt-0">
+                    <h4 class="p-0 mt-0 mb-4">contact</h4>
+                    <p class="pb-0 mb-0">Lorem ipsum dolor sit Lorem, ipsum dolor. <a class="text-danger" href="#">error explicabo</a></p>
                   </div>
                   <div class="col text-center">
-                    <h4>contact</h4>
-                    <p>Lorem ipsum dolor sit <a class="text-danger" href="#">error explicabo non.</a></p>
-                  </div>
-                  <div class="col text-center">
-                    <h4>about</h4>
-                    <p>Lorem ipsum dolor, sit amet <a class="text-danger" href="#">error explicabo non.</a></p>
+                    <h4 class="p-0 mt-0 mb-4">about</h4>
+                    <p class="pb-0 mb-0">Lorem ipsum dolor sit Lorem, ipsum dolor. <a class="text-danger" href="#">error explicabo</a></p>
                   </div>
               </div>
               <nav class="footer-bottom text-grey">
                 <div class="container-fluid">
                     <div class="d-flex  flex-column flex-lg-row justify-content-between align-items-center p-2 text-secondary">
                     <div class="social-icons p-2">
-                        <i class="bi bi-facebook"></i>
-                        <i class="bi bi-twitter"></i>
-                        <i class="bi bi-telegram"></i>
-                        <i class="bi bi-whatsapp"></i>
-                        <i class="bi bi-linkedin"></i>
-                        <i class="bi bi-youtube"></i>
+                        <a href="#"><i class="bi bi-facebook"></i></a>
+                        <a href="#"><i class="bi bi-twitter"></i></a>
+                        <a href="#"><i class="bi bi-telegram"></i></a>
+                        <a href="#"><i class="bi bi-whatsapp"></i></a>
+                        <a href="#"><i class="bi bi-linkedin"></i></a>
+                        <a href="#"><i class="bi bi-youtube"></i></a>
                     </div>
                     <p class="copyright p-2 m-0">
                         Copyright &copy; TwoSteps. All rights reserved.
