--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
               </ul>
               <div class="subscribe-section row py-5 my-3 px-5 flex-column flex-lg-row align-items-center justify-content-center">
                   <div class="col text-center">
-                    <h4>subscribe</h4>
-                    <form class="">
+                    <h4 class="p-0 pt-0 mt-0 mb-4">subscribe</h4>
+                    <form class="p-0 m-0">
                       <div class="container m-0 p-2">
                           <div class="row">
                               <div class="col-12 col-md-8 p-1">
@@ -191,25 +191,25 @@
                       </div>
                     </form>
                   </div>
-                  <div class="col text-center">
-                    <h4>contact</h4>
-                    <p>Lorem ipsum dolor sit <a class="text-danger" href="#">error explicabo non.</a></p>
+                  <div class="col text-center pt-0 mt-0">
+                    <h4 class="p-0 mt-0 mb-4">contact</h4>
+                    <p class="pb-0 mb-0">Lorem ipsum dolor sit Lorem, ipsum dolor. <a class="text-danger" href="#">error explicabo</a></p>
                   </div>
                   <div class="col text-center">
-                    <h4>about</h4>
-                    <p>Lorem ipsum dolor, sit amet <a class="text-danger" href="#">error explicabo non.</a></p>
+                    <h4 class="p-0 mt-0 mb-4">about</h4>
+                    <p class="pb-0 mb-0">Lorem ipsum dolor sit Lorem, ipsum dolor. <a class="text-danger" href="#">error explicabo</a></p>
                   </div>
               </div>
               <nav class="footer-bottom text-grey">
                 <div class="container-fluid">
                     <div class="d-flex  flex-column flex-lg-row justify-content-between align-items-center p-2 text-secondary">
                     <div class="social-icons p-2">
-                        <i class="bi bi-facebook"></i>
-                        <i class="bi bi-twitter"></i>
-                        <i class="bi bi-telegram"></i>
-                        <i class="bi bi-whatsapp"></i>
-                        <i class="bi bi-linkedin"></i>
-                        <i class="bi bi-youtube"></i>
+                        <a href="#"><i class="bi bi-facebook"></i></a>
+                        <a href="#"><i class="bi bi-twitter"></i></a>
+                        <a href="#"><i class="bi bi-telegram"></i></a>
+                        <a href="#"><i class="bi bi-whatsapp"></i></a>
+                        <a href="#"><i class="bi bi-linkedin"></i></a>
+                        <a href="#"><i class="bi bi-youtube"></i></a>
                     </div>
                     <p class="copyright p-2 m-0">
                         Copyright &copy; TwoSteps. All rights reserved.
@@ -219,7 +219,6 @@
             </nav>
         </footer>
     </div>
-
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
