--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="TwoSteps" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://francisuloko.github.io/html-css-capstone-proj/"/>
-    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://francisuloko.github.io/html-css-capstone-proj/img/screenshots/main-medium.jpeg"/>
+    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://francisuloko.github.io/html-css-capstone-proj/img/screenshots/main-medium (copy).jpeg"/>
     <meta property="og:description" content="This project involves building a responsive, mobile first, Hotel directory called TwoSteps. This hotel directory enables a user to find hotels around the world. The web app displays the details of a registered hotel in two simple steps by 1.) entering a search criteria and 2.) selecting a hotel from the list of search results. The name of the app is derived from the number of actions (two steps) required to land on a hotel's page." />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
